<resources>
    <string name="app_name">ParcialPMD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="usernameReg">Username</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog">Sign in</string>
    <string name="signin_redirect">Already a member? Sign in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>
    <string name="create">Create</string>
    <string name="name_team_2">Name Team 2</string>
    <string name="name_team_1">Name Team 1</string>
    <string name="text_team_a">Team A</string>
    <string name="action_3_points">+3 POINTS</string>
    <string name="action_2_points">+2 POINTS</string>
    <string name="action_free_throw">FREE THROW</string>
    <string name="text_team_b">Team B</string>
    <string name="action_reset">reset</string>
</resources>
