<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/background"
                tools:context="com.example.parcialpmd.fragments.login">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="277dp"

            android:layout_alignParentStart="true" android:layout_marginStart="-3dp">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
        >


            <AutoCompleteTextView
                    android:id="@+id/team1"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_rect"
                    android:drawableLeft="@drawable/icon_person"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_person"
                    android:hint="@string/name_team_1"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp"/>


                <AutoCompleteTextView
                    android:id="@+id/team2"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_rect"
                    android:drawableLeft="@drawable/icon_person"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_person"
                    android:hint="@string/name_team_2"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp"/>







            <Button
                    android:id="@+id/btncreateMatch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btnsignin_gradient"
                    android:text="@string/create"
                    android:textColor="#FFFFFF"/>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>